@@ -107,7 +107,7 @@
 
     <profiles>
         <profile>
-            <id>generate-graalvm-files</id>
+            <id>native</id>
             <!-- The AWS DynamoDBClient uses com.amazonaws.xray.interceptors.TracingInterceptor if available on the
             classpath. If the DynamoDB persistence store is used together with tracing, this would fail in GraalVM 
             otherwise since it tries to load the tracing interceptor at runtime. This makes sure it is included in
@@ -122,38 +122,8 @@
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <argLine>
-                                -Dorg.graalvm.nativeimage.imagecode=agent
-                                -agentlib:native-image-agent=config-output-dir=src/main/resources/META-INF/native-image/software.amazon.lambda/powertools-idempotency-dynamodb,experimental-class-define-support
-                                --add-opens java.base/java.util=ALL-UNNAMED
-                                --add-opens java.base/java.lang=ALL-UNNAMED
-                            </argLine>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>graalvm-native</id>
-            <build>
-                <plugins>
-                    <plugin>
                         <groupId>org.graalvm.buildtools</groupId>
                         <artifactId>native-maven-plugin</artifactId>
-                        <version>0.11.2</version>
-                        <extensions>true</extensions>
-                        <executions>
-                            <execution>
-                                <id>test-native</id>
-                                <goals>
-                                    <goal>test</goal>
-                                </goals>
-                                <phase>test</phase>
-                            </execution>
-                        </executions>
                         <configuration>
                             <imageName>powertools-idempotency-dynamodb</imageName>
                             <exclusions>
@@ -162,15 +132,13 @@
                                     <artifactId>DynamoDBLocal</artifactId>
                                 </exclusion>
                             </exclusions>
-                            <buildArgs>
-                                <buildArg>--add-opens java.base/java.util=ALL-UNNAMED</buildArg>
-                                <buildArg>--add-opens java.base/java.lang=ALL-UNNAMED</buildArg>
+                            <agent>
+                                <metadataCopy>
+                                    <outputDirectory>src/main/resources/META-INF/native-image/software.amazon.lambda/powertools-idempotency-dynamodb</outputDirectory>
+                                </metadataCopy>
+                            </agent>
+                            <buildArgs combine.children="append">
                                 <buildArg>--enable-url-protocols=http</buildArg>
-                                <buildArg>--no-fallback</buildArg>
-                                <buildArg>--verbose</buildArg>
-                                <buildArg>--native-image-info</buildArg>
-                                <buildArg>-H:+UnlockExperimentalVMOptions</buildArg>
-                                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
                             </buildArgs>
                         </configuration>
                     </plugin>
